# SaturnLib

./: .gitignore  CMakeLists.txt
include/: cbasicoperands.hpp  cbasicoperators.hpp  cexprelement.hpp  cexpression.hpp  cexpressionparser.hpp  cfileparser.hpp  coperand.hpp  coperator.hpp  ctype.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: cfileparser.cpp  entries
